update api for admin controller